@@ -26,6 +26,7 @@ Added support to tell disambiguation to prioritise certain argument types (#11)
 Added function renaming and used it to tidy up ImGui_GetColorU32 and ImGui_IsRectVisible (#11, #25)
 Added support for forward declaration of enums and enum storage types
 Fixed issue where (void) to declarations of C functions with no arguments was omitted in some cases (#26) [@oskarnp]
+Fixed issue where the JSON representation of anonymous unions was incorrect (thanks to [@oskarnp] for the heads-up)
 
 --- v0.03
 
